<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pascal Task</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="age">Age</string>
    <string name="sal">Salary</string>
    <string name="send">Send</string>

</resources>
