
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	<TextView
        	android:id="@+id/textView1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/first" />
		
		<EditText
	        android:id="@+id/editText1"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10" 
        	android:hint="@string/first"/>
	
	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	<TextView
        	android:id="@+id/textView2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/last" />
		
		<EditText
	        android:id="@+id/editText2"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10" 
        	android:hint="@string/last"/>
	
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	<TextView
        	android:id="@+id/textView3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/age" />
		
		<EditText
	        android:id="@+id/editText3"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10" 
        	android:hint="@string/age"/>
	
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	<TextView
        	android:id="@+id/textView4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
           	android:text="@string/sal" />
		
		<EditText
	        android:id="@+id/editText4"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10" 
        	android:hint="@string/sal"/>
	
	</LinearLayout>

	<Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/send" 
	    android:onClick="click"/>
    
</LinearLayout>
